<?xml version="1.0"?>
<package format="2">
  <name>kubot_behavior_tree</name>
  <version>1.0.0</version>
  <description>
  The kubot_behavior_tree demo package.
  </description>

  <maintainer email="YunHong.Wang@ShanYangYe.com">Yun Hong</maintainer>

  <license>Apache 2.0</license>

  <!-- KUBOT ROS  -->
  <author>KUBOT</author>
  <author email="t105408001@ntut.org.tw">Yun Hong</author>
  <author email="axxx2934@gmail.com">Silas Xie</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>behaviortree_cpp_v3</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>object_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>behaviortree_cpp_v3</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>object_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>behaviortree_cpp_v3</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>object_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
